# spark-connect-cli

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: publish.yml
src/spark_connect_cli/: __init__.py  cli.py  jobs.py  meta.py  query.py  rest.py  session.py  sync.py
tests/: test_conn.py  test_guard.py  test_jobs.py
